# atlas-rl

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-train.txt
atlas_rl/: __init__.py  demo.py
atlas_rl/core/: env.py  protocol.py  registry.py  seeding.py  types.py
atlas_rl/data/: build_dataset.py
atlas_rl/envs/: __init__.py  ci_doctor.py  config_repair.py  cron_author.py  dockerfile_lint.py  k8s_doctor.py  log_triage.py  regex_extract.py  runbook_planner.py  semver_resolve.py  shell_golf.py
atlas_rl/evaluation/: report.py  run_eval.py  stats.py  transfer_matrix.py
atlas_rl/inference/: backends.py
atlas_rl/rewards/: hacking_audit.py
atlas_rl/training/: grpo_train.py  reward_adapter.py  sft_rs_baseline.py
atlas_rl/verifiers_compat/: __init__.py
configs/: eval_matrix.yaml  final_blind_eval.yaml  grpo_no_synthesis.yaml  grpo_no_triage.yaml  grpo_oracle_warm_qwen3b.yaml  grpo_qwen1p5b_pilot.yaml  grpo_qwen3b_3090.yaml  sft_oracle_qwen3b.yaml  sft_rs_qwen3b.yaml  transfer.yaml  transfer_smoke.yaml
configs/qwen3_family/: base_dev_eval.yaml  comparison_dev_eval.yaml  final_blind_eval.yaml  grpo_stable_qwen3_4b_instruct_2507.yaml  (+1 more)
scripts/: 00_smoke_cpu.sh  01_build_datasets.sh  10_train_grpo_pilot_1p5b.sh  11_train_grpo_3b.sh  12_train_sft_rs.sh  13_train_transfer.sh  14_train_oracle_warm_grpo.sh  20_eval_matrix.sh  21_transfer_matrix.sh  22_hacking_audit.sh
tests/: test_components.py  test_determinism.py  test_difficulty.py  test_hacking.py  test_pipeline.py  test_reliability.py  test_training_data.py  test_verifiability.py
